testsuite/tests/parser/should_fail/NoBlockArgumentsFailArrowCmds.stderr

NoBlockArgumentsFailArrowCmds.hs:7:27: error: [GHC-12178]
    Unexpected lambda command in function application:
        \ () -> () >- returnA
    Suggested fixes:
      • Use parentheses.
      • Perhaps you intended to use the ‘BlockArguments’ extension
